--- a/public/index.html
+++ b/public/index.html
@@ -3,36 +3,57 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Real-Time Chat</title>
+    <link rel="stylesheet" type="text/css" href="./style/chat.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <form id="message-form">
-        <div class="mb-3">
-            <label for="messageInput" class="form-label">Message</label>
-            <input type="text" id="user-message" class="form-control" aria-describedby="emailHelp">
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Choose username</h1>
+                </div>
+                <div class="modal-body">
+                    <form id="myForm">
+                        <div>
+                            <input type="text" class="form-control" id="inputValue" placeholder="Enter a value">
+                        </div>
+                        <div id="invalidMessage" class="invalid-feedback pt-2 pb-2">Please choose a username.</div>
+                        <button type="submit" class="btn btn-primary mt-2 w-100">Start Chatting!</button>
+                    </form>
+                </div>
+            </div>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    </div>
+    </div>
+    <div class="fixed-bottom w-100 bg-warning"></div>
+    <div class="container">
+        <div class="d-xxl-flex d-xl-flex d-lg-flex d-md-flex justify-content-start mt-4 h-100">
+            <div id="users"
+                class="d-none d-xxl-block d-xl-block d-lg-block d-md-block border-end mr-2 p-3 col-lg-2 col-sm-4">
+                <strong>Active Users:</strong>
+                <ul id="userList" class="list-unstyled"></ul>
+            </div>
+            <div id="chat" class="col-lg-10 col-sm-8 ml-2">
+                <div id="messages" class="p-3 mb-4" style="max-height: 900px; overflow-y: auto;"></div>
+            </div>
+        </div>
+    </div>
+    <div class="fixed-bottom container w-100 d-flex pb-2 bg-white">
+        <input type="text" id="messageInput" class="form-control" placeholder="Type your message...">
+        <button onclick="sendMessage()" class="btn btn-primary ms-2">Send</button>
+    </div>
 
+    <!-- Socket.IO scripts -->
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        const socket = io('http://localhost:3000');
-        socket.on('connect', () => {
-            console.log(socket.id);
-            socket.emit('messageFromClient', { message: 'Welcome from the client!' });
-        });
-
-        socket.on('messageFromServer', (data) => {
-            console.log(data);
-        });
-
-        socket.io.on("reconnect", (attempt) => {
-            console.log('reconnect tries: ' + attempt);
-        });
-    </script>
+    <script src="./scripts/socket.js" defer></script>
 </body>
 
 </html>
